force-app/main/default/objects/Closure_Event__c/Closure_Event__c.object-meta.xml
<CustomObject>
    <description>Atomic compliance record. One row per (Date x School). Powers reporting and the makeup workflow.</description>
    <label>Closure Event</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Closure Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closure Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>