force-app/main/default/objects/Closure_Event__c/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <label>Closure Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>