force-app/main/default/objects/Closure_Event__c/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <description>Closure_Reason__mdt DeveloperName. Flows/Apex use it to look up the CMDT record (requires_makeup_default, etc.). Stored as text because custom objects cannot hold a true metadata-relationship lookup.</description>
    <label>Closure Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>