force-app/main/default/objects/Closure_Event__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Auto-populated by the Populate_District_On_Event flow from School.ParentId on insert. Never set manually.</description>
    <label>District</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closure Events (District)</relationshipLabel>
    <relationshipName>Closure_Events_District</relationshipName>
    <type>Lookup</type>
</CustomField>