force-app/main/default/objects/Closure_Event__c/fields/eLearning_Day_Number__c.field-meta.xml
<CustomField>
    <fullName>eLearning_Day_Number__c</fullName>
    <label>eLearning Day Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>