force-app/main/default/objects/Closure_Event__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Idempotency key from the Python API. Format: districtCode-schoolCode-closureDate-uuid.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>