force-app/main/default/objects/Closure_Event__c/fields/Hours_Missed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Missed__c</fullName>
    <defaultValue>6.5</defaultValue>
    <description>Instructional hours missed. Drives Make_Up_Required and Tier calculations. Default 6.5 (org-wide default from Compliance_Rules__mdt).</description>
    <label>Hours Missed</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>