force-app/main/default/objects/Closure_Event__c/fields/Instructional_Day__c.field-meta.xml
<CustomField>
    <fullName>Instructional_Day__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Was this a scheduled instructional day? Closures on non-instructional days do not count toward missed days or Tier.</description>
    <label>Instructional Day</label>
    <type>Checkbox</type>
</CustomField>