force-app/main/default/objects/Closure_Event__c/fields/Make_Up_Method__c.field-meta.xml
<CustomField>
    <fullName>Make_Up_Method__c</fullName>
    <label>Make Up Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Hours to the School Day</fullName>
            </value>
            <value>
                <fullName>District School Board Waived Days 4-6</fullName>
            </value>
            <value>
                <fullName>Scheduled Weather Makeup Day</fullName>
            </value>
            <value>
                <fullName>State Board of Education Waived Days 7-9</fullName>
            </value>
            <value>
                <fullName>Extended Day</fullName>
                <isActive>false</isActive>
                <label>Extended Day</label>
            </value>
            <value>
                <fullName>Full Day</fullName>
                <isActive>false</isActive>
                <label>Full Day</label>
            </value>
            <value>
                <fullName>Saturday</fullName>
                <isActive>false</isActive>
                <label>Saturday</label>
            </value>
            <value>
                <fullName>Waived – General Assembly</fullName>
                <isActive>false</isActive>
                <label>Waived – General Assembly</label>
            </value>
            <value>
                <fullName>Waived – Local Board</fullName>
                <isActive>false</isActive>
                <label>Waived – Local Board</label>
            </value>
            <value>
                <fullName>Waived – State Board</fullName>
                <isActive>false</isActive>
                <label>Waived – State Board</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>