force-app/main/default/objects/Closure_Event__c/fields/Make_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Make_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the Set_Make_Up_Required flow / Apex trigger. True unless reason is eLearning, non-instructional day, or the school year already meets minimum days.</description>
    <label>Make Up Required</label>
    <type>Checkbox</type>
</CustomField>