force-app/main/default/objects/Closure_Event__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Member Center user who reported the closure. A Contact (AccountId = District), not a Salesforce User.</description>
    <label>Reported By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closure Events Reported</relationshipLabel>
    <relationshipName>Closure_Events_Reported</relationshipName>
    <type>Lookup</type>
</CustomField>