force-app/main/default/objects/Closure_Event__c/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <description>Server timestamp set on insert (Flow 1 sets NOW()).</description>
    <label>Reported Date</label>
    <type>DateTime</type>
</CustomField>