force-app/main/default/objects/Closure_Event__c/fields/Scheduled_Makeup_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Makeup_Date__c</fullName>
    <label>Scheduled Makeup Date</label>
    <type>Date</type>
</CustomField>