force-app/main/default/objects/Closure_Event__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The school this closure event applies to. Must be a School-RecordType Account (enforced by validation rule).</description>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closure Events (School)</relationshipLabel>
    <relationshipName>Closure_Events_School</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>