force-app/main/default/objects/Closure_Event__c/fields/School_Year__c.field-meta.xml
<CustomField>
    <fullName>School_Year__c</fullName>
    <description>Groups YTD calculations across the July 1 cutover. Returns the spring calendar year of the school year.</description>
    <formula>TEXT(IF(MONTH(Closure_Date__c) &gt;= 7, YEAR(Closure_Date__c) + 1, YEAR(Closure_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Year</label>
    <type>Text</type>
</CustomField>