force-app/main/default/objects/Closure_Event__c/fields/Source_Case__c.field-meta.xml
<CustomField>
    <fullName>Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pointer to the originating Closure_Submission Case. Lookup (NOT master-detail) so events outlive the Case.</description>
    <label>Source Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Closure Events (Source)</relationshipLabel>
    <relationshipName>Closure_Events_Source</relationshipName>
    <type>Lookup</type>
</CustomField>