force-app/main/default/objects/Closure_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Make_Up_Pending</fullName>
                <label>Make Up Pending</label>
            </value>
            <value>
                <fullName>Make_Up_Reported</fullName>
                <label>Make Up Reported</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Amended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>