force-app/main/default/objects/Closure_Event__c/fields/Waiver_Request_Case__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Request_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set when this event is included in a waiver request. Lookup to the Closure_Waiver_Request Case.</description>
    <label>Waiver Request Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Closure Events (Waiver Request)</relationshipLabel>
    <relationshipName>Closure_Events_Waiver</relationshipName>
    <type>Lookup</type>
</CustomField>