force-app/main/default/objects/Closure_Event__c/validationRules/School_Must_Be_Child_Of_District.validationRule-meta.xml
<ValidationRule>
    <fullName>School_Must_Be_Child_Of_District</fullName>
    <active>true</active>
    <description>Ensures the Closure Event&apos;s School Account is a child of the selected District Account.</description>
    <errorConditionFormula>School__r.ParentId != District__c</errorConditionFormula>
    <errorMessage>The selected school must belong to the selected district.</errorMessage>
</ValidationRule>