force-app/main/default/objects/Closure_Event__c/listViews/All_Closure_Events.listView-meta.xml
<ListView>
    <fullName>All_Closure_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Closure Events</label>
</ListView>